--- a/index.html
+++ b/index.html
@@ -1,91 +1,1 @@
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-<meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
-</head>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-<link rel="shortcut icon" href="https://i.ibb.co/Fhsr2bV/6avR6E.png" type="image/x-icon">
-<script type='text/javascript'>
-//<![CDATA[
-msg = "Hacked By SiyahBayrak ~ ";
-msg = "" + msg;pos = 0;
-function scrollMSG()
-{document.title = msg.substring(pos, msg.length) + msg.substring(0, pos); pos++;
-if (pos > msg.length) pos = 0
-window.setTimeout("scrollMSG()",150);}
-scrollMSG();
-//]]>
-</script>
-<link href="http://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Geo" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet" type="text/css">
-</head>
-<body style="background-color: #000000;">
-<div align="center">
-<center><img src="">
-</br><img src="https://i.ibb.co/Fhsr2bV/6avR6E.png" width="500">
-<br>
-<font face="Averia Sans Libre" size="5" style="color: red; text-shadow: 0px 1px 6px red;">~ Owned By Gaddar ~</font>
-<br>
-
-
-<font color="black" face="Averia Sans Libre" size="4"><font style="color: orange; text-shadow: 0px 1px 6px orange;" face="Geo" size="4">Just for fun.</br>
-<font color="black" face="Averia Sans Libre" size="4"><font style="color: orange; text-shadow: 0px 1px 6px orange;" face="Geo" size="4">Lutfen guvenlik aciklarinizi duzeltin.</br>
-
-
-<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false"></body>
-<script type="text/javascript">
-
-
-
-//form tags to omit in NS6+:
-var omitformtags=["input", "textarea", "select"]
-
-omitformtags=omitformtags.join("|")
-
-function disableselect(e){
-if (omitformtags.indexOf(e.target.tagName.toLowerCase())==-1)
-return false
-}
-
-function reEnable(){
-return true
-}
-
-if (typeof ********.onselectstart!="undefined")
-********.onselectstart=new Function ("return false")
-else{
-********.onmousedown=disableselect
-********.onmouseup=reEnable
-}
-
-
-
-</script>
-<body onkeydown="return false">
-
-</font></font></font></font>
-<font color="black" face="Averia Sans Libre" size="8">
-<font color="red"></font>
-<font style="color: #00ff00; text-shadow:#00ff00 0px 1px 7px;" face="Averia Sans Libre" size="6">
-</font>
-<font color="red"></font>
-</font></font></br><font face="Averia Sans Libre" size="4" style="color: white; text-shadow: 0px 1px 9px white;">
-Gaddar
-</font><br>
-<font color=red>
-<span style="text-shadow: 0px 0px 12px ;background:"><strong>
-<font face="Averia Sans Libre" size="2">
-SiyahBayrak.ORG
-</font></strong></span></font>
-<br>
-<font face="Averia Sans Libre" size="5" style="color: aqua; text-shadow: 0px 1px 12px aqua;"><b>Instagram @gadd6r</font></br>
-<img src="https://i.ibb.co/gVMFpBY/line-decoration.png" width="550">
-
-<iframe allow="autoplay; encrypted-media" allowfullscreen="" frameborder="0" height="0" src="https://www.mboxdrive.com/fuchs-vaktimiz-yok.mp3" width="0">
-
-</font></font></div>
-</center>
-</body></html>
+Security test by Poyraz Türkoğlu
